Cabal-Version:          2.2
Name:                   hie-bios
Version:                0.3.2
Author:                 Matthew Pickering <matthewtpickering@gmail.com>
Maintainer:             Matthew Pickering <matthewtpickering@gmail.com>
License:                BSD-3-Clause
License-File:           LICENSE
Homepage:               https://github.com/mpickering/hie-bios
Synopsis:               Set up a GHC API session
Description:            Set up a GHC API session and obtain flags required to compile a source file

Category:               Development
Build-Type:             Simple
-- No glob syntax until GHC 8.6 because of stack
Extra-Source-Files:     ChangeLog
                        README.md
                        wrappers/cabal
                        wrappers/cabal.hs
                        tests/configs/bazel.yaml
                        tests/configs/bios-1.yaml
                        tests/configs/bios-2.yaml
                        tests/configs/cabal-1.yaml
                        tests/configs/cabal-multi.yaml
                        tests/configs/default.yaml
                        tests/configs/dependencies.yaml
                        tests/configs/direct.yaml
                        tests/configs/multi.yaml
                        tests/configs/nested-cabal-multi.yaml
                        tests/configs/nested-stack-multi.yaml
                        tests/configs/none.yaml
                        tests/configs/obelisk.yaml
                        tests/configs/stack-config.yaml
                        tests/configs/stack-multi.yaml
                        tests/projects/multi-cabal/Setup.hs
                        tests/projects/multi-cabal/app/Main.hs
                        tests/projects/multi-cabal/cabal.project
                        tests/projects/multi-cabal/hie.yaml
                        tests/projects/multi-cabal/multi-cabal.cabal
                        tests/projects/multi-cabal/src/Lib.hs
                        tests/projects/multi-stack/Setup.hs
                        tests/projects/multi-stack/app/Main.hs
                        tests/projects/multi-stack/cabal.project
                        tests/projects/multi-stack/hie.yaml
                        tests/projects/multi-stack/multi-stack.cabal
                        tests/projects/multi-stack/src/Lib.hs
                        tests/projects/simple-bios/A.hs
                        tests/projects/simple-bios/B.hs
                        tests/projects/simple-bios/hie-bios.sh
                        tests/projects/simple-bios/hie.yaml
                        tests/projects/simple-cabal/A.hs
                        tests/projects/simple-cabal/B.hs
                        tests/projects/simple-cabal/CHANGELOG.md
                        tests/projects/simple-cabal/Setup.hs
                        tests/projects/simple-cabal/cabal.project
                        tests/projects/simple-cabal/hie.yaml
                        tests/projects/simple-cabal/simple-cabal.cabal
                        tests/projects/simple-direct/A.hs
                        tests/projects/simple-direct/B.hs
                        tests/projects/simple-direct/hie.yaml
                        tests/projects/simple-stack/A.hs
                        tests/projects/simple-stack/B.hs
                        tests/projects/simple-stack/CHANGELOG.md
                        tests/projects/simple-stack/Setup.hs
                        tests/projects/simple-stack/cabal.project
                        tests/projects/simple-stack/hie.yaml
                        tests/projects/simple-stack/simple-stack.cabal


tested-with: GHC==8.6.4, GHC==8.4.4, GHC==8.2.2

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  HS-Source-Dirs:       src
  Exposed-Modules:      HIE.Bios
                        HIE.Bios.Config
                        HIE.Bios.Cradle
                        HIE.Bios.Environment
                        HIE.Bios.Internal.Debug
                        HIE.Bios.Flags
                        HIE.Bios.Types
                        HIE.Bios.Internal.Log
                        HIE.Bios.Ghc.Api
                        HIE.Bios.Ghc.Check
                        HIE.Bios.Ghc.Doc
                        HIE.Bios.Ghc.Gap
                        HIE.Bios.Ghc.Load
                        HIE.Bios.Ghc.Logger
                        HIE.Bios.Wrappers
  Other-Modules:        Paths_hie_bios
  autogen-modules:      Paths_hie_bios
  Build-Depends:
                        base >= 4.8 && < 5,
                        base16-bytestring    >= 0.1.1 && < 0.2,
                        bytestring           >= 0.10.8 && < 0.11,
                        deepseq              >= 1.4.3 && < 1.5,
                        containers           >= 0.5.10 && < 0.7,
                        cryptohash-sha1      >= 0.11.100 && < 0.12,
                        directory            >= 1.3.0 && < 1.4,
                        filepath             >= 1.4.1 && < 1.5,
                        time                 >= 1.8.0 && < 1.10,
                        extra                >= 1.6.14 && < 1.7,
                        process              >= 1.6.1 && < 1.7,
                        ghc                  >= 8.2.2 && < 8.9,
                        transformers         >= 0.5.2 && < 0.6,
                        temporary            >= 1.2 && < 1.4,
                        text                 >= 1.2.3 && < 1.3,
                        unix-compat          >= 0.5.1 && < 0.6,
                        unordered-containers >= 0.2.9 && < 0.3,
                        vector               >= 0.12.0 && < 0.13,
                        yaml                 >= 0.8.32 && < 0.12,
                        hslogger             >= 1.2 && < 1.4,
                        file-embed           >= 0.0.11 && < 1,
                        conduit              >= 1.3 && < 2,
                        conduit-extra        >= 1.3 && < 2


Executable hie-bios
  Default-Language:     Haskell2010
  Main-Is:              Main.hs
  Other-Modules:        Paths_hie_bios
  GHC-Options:          -Wall
  HS-Source-Dirs:       exe
  Build-Depends:        base >= 4.9 && < 5
                      , directory
                      , filepath
                      , ghc
                      , hie-bios

test-suite parser-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:
      base,
      tasty,
      tasty-hunit,
      hie-bios,
      filepath

  hs-source-dirs: tests/
  ghc-options: -threaded -Wall
  main-is: ParserTests.hs

test-suite bios-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:
      base,
      tasty,
      tasty-hunit,
      hie-bios,
      filepath,
      directory,
      ghc

  hs-source-dirs: tests/
  ghc-options: -threaded -Wall
  main-is: BiosTests.hs

Source-Repository head
  Type:                 git
  Location:             git://github.com/mpickering/hie-bios.git
