Cabal-Version:          2.2
Name:                   hie-bios
Version:                0.9.1
Author:                 Matthew Pickering <matthewtpickering@gmail.com>
Maintainer:             Matthew Pickering <matthewtpickering@gmail.com>
License:                BSD-3-Clause
License-File:           LICENSE
Homepage:               https://github.com/mpickering/hie-bios
Synopsis:               Set up a GHC API session
Description:            Set up a GHC API session and obtain flags required to compile a source file

Category:               Development
Build-Type:             Simple
-- No glob syntax until GHC 8.6 because of stack
Extra-Source-Files:     ChangeLog.md
                        README.md
                        wrappers/cabal
                        wrappers/cabal.hs
                        tests/configs/*.yaml
                        tests/projects/cabal-with-ghc/cabal-with-ghc.cabal
                        tests/projects/cabal-with-ghc/cabal.project
                        tests/projects/cabal-with-ghc/hie.yaml
                        tests/projects/cabal-with-ghc/src/MyLib.hs
                        tests/projects/symlink-test/a/A.hs
                        tests/projects/symlink-test/hie.yaml
                        tests/projects/deps-bios-new/A.hs
                        tests/projects/deps-bios-new/B.hs
                        tests/projects/deps-bios-new/hie-bios.sh
                        tests/projects/deps-bios-new/hie.yaml
                        tests/projects/multi-direct/A.hs
                        tests/projects/multi-direct/B.hs
                        tests/projects/multi-direct/hie.yaml
                        tests/projects/multi-cabal/app/Main.hs
                        tests/projects/multi-cabal/cabal.project
                        tests/projects/multi-cabal/hie.yaml
                        tests/projects/multi-cabal/multi-cabal.cabal
                        tests/projects/multi-cabal/src/Lib.hs
                        tests/projects/monorepo-cabal/cabal.project
                        tests/projects/monorepo-cabal/hie.yaml
                        tests/projects/monorepo-cabal/A/Main.hs
                        tests/projects/monorepo-cabal/A/A.cabal
                        tests/projects/monorepo-cabal/B/MyLib.hs
                        tests/projects/monorepo-cabal/B/B.cabal
                        tests/projects/multi-stack/app/Main.hs
                        tests/projects/multi-stack/cabal.project
                        tests/projects/multi-stack/hie.yaml
                        tests/projects/multi-stack/multi-stack.cabal
                        tests/projects/multi-stack/src/Lib.hs
                        tests/projects/failing-bios/A.hs
                        tests/projects/failing-bios/B.hs
                        tests/projects/failing-bios/hie.yaml
                        tests/projects/failing-bios-ghc/A.hs
                        tests/projects/failing-bios-ghc/B.hs
                        tests/projects/failing-bios-ghc/hie.yaml
                        tests/projects/failing-cabal/failing-cabal.cabal
                        tests/projects/failing-cabal/hie.yaml
                        tests/projects/failing-cabal/MyLib.hs
                        tests/projects/failing-stack/failing-stack.cabal
                        tests/projects/failing-stack/hie.yaml
                        tests/projects/failing-stack/src/Lib.hs
                        tests/projects/nested-cabal/nested-cabal.cabal
                        tests/projects/nested-cabal/cabal.project
                        tests/projects/nested-cabal/hie.yaml
                        tests/projects/nested-cabal/MyLib.hs
                        tests/projects/nested-cabal/sub-comp/sub-comp.cabal
                        tests/projects/nested-cabal/sub-comp/Lib.hs
                        tests/projects/nested-stack/nested-stack.cabal
                        tests/projects/nested-stack/hie.yaml
                        tests/projects/nested-stack/MyLib.hs
                        tests/projects/nested-stack/sub-comp/sub-comp.cabal
                        tests/projects/nested-stack/sub-comp/Lib.hs
                        tests/projects/simple-bios/A.hs
                        tests/projects/simple-bios/B.hs
                        tests/projects/simple-bios/hie-bios.sh
                        tests/projects/simple-bios/hie-bios-deps.sh
                        tests/projects/simple-bios/hie.yaml
                        tests/projects/simple-bios-ghc/A.hs
                        tests/projects/simple-bios-ghc/B.hs
                        tests/projects/simple-bios-ghc/hie-bios.sh
                        tests/projects/simple-bios-ghc/hie.yaml
                        tests/projects/simple-bios-shell/A.hs
                        tests/projects/simple-bios-shell/B.hs
                        tests/projects/simple-bios-shell/hie.yaml
                        tests/projects/simple-cabal/A.hs
                        tests/projects/simple-cabal/B.hs
                        tests/projects/simple-cabal/cabal.project
                        tests/projects/simple-cabal/hie.yaml
                        tests/projects/simple-cabal/simple-cabal.cabal
                        tests/projects/simple-direct/A.hs
                        tests/projects/simple-direct/B.hs
                        tests/projects/simple-direct/hie.yaml
                        tests/projects/simple-stack/A.hs
                        tests/projects/simple-stack/B.hs
                        tests/projects/simple-stack/cabal.project
                        tests/projects/simple-stack/hie.yaml
                        tests/projects/simple-stack/simple-stack.cabal
                        "tests/projects/space stack/A.hs"
                        "tests/projects/space stack/B.hs"
                        "tests/projects/space stack/hie.yaml"
                        "tests/projects/space stack/stackproj.cabal"
                        tests/projects/implicit-cabal/cabal.project
                        tests/projects/implicit-cabal/implicit-cabal.cabal
                        tests/projects/implicit-cabal/Main.hs
                        tests/projects/implicit-cabal-no-project/implicit-cabal-no-project.cabal
                        tests/projects/implicit-cabal-no-project/Main.hs
                        tests/projects/implicit-cabal-deep-project/README
                        tests/projects/implicit-cabal-deep-project/implicit-cabal-deep-project.cabal
                        tests/projects/implicit-cabal-deep-project/Main.hs
                        tests/projects/implicit-cabal-deep-project/cabal.project
                        tests/projects/implicit-cabal-deep-project/foo/foo.cabal
                        tests/projects/implicit-cabal-deep-project/foo/Main.hs
                        tests/projects/implicit-stack/implicit-stack.cabal
                        tests/projects/implicit-stack/Main.hs
                        tests/projects/implicit-stack-multi/implicit-stack-multi.cabal
                        tests/projects/implicit-stack-multi/Main.hs
                        tests/projects/implicit-stack-multi/other-package/other-package.cabal
                        tests/projects/implicit-stack-multi/other-package/Main.hs
                        tests/projects/multi-stack-with-yaml/appA/appA.cabal
                        tests/projects/multi-stack-with-yaml/appA/src/Lib.hs
                        tests/projects/multi-stack-with-yaml/appB/appB.cabal
                        tests/projects/multi-stack-with-yaml/appB/src/Lib.hs
                        tests/projects/multi-stack-with-yaml/hie.yaml
                        tests/projects/stack-with-yaml/app/Main.hs
                        tests/projects/stack-with-yaml/hie.yaml
                        tests/projects/stack-with-yaml/stack-with-yaml.cabal
                        tests/projects/stack-with-yaml/src/Lib.hs

tested-with: GHC ==8.6.5 || ==8.8.4 || ==8.10.4 || ==9.0.1 || ==9.0.2 || ==9.2.1

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  HS-Source-Dirs:       src
  Exposed-Modules:      HIE.Bios
                        HIE.Bios.Config
                        HIE.Bios.Cradle
                        HIE.Bios.Environment
                        HIE.Bios.Internal.Debug
                        HIE.Bios.Flags
                        HIE.Bios.Types
                        HIE.Bios.Internal.Log
                        HIE.Bios.Ghc.Api
                        HIE.Bios.Ghc.Check
                        HIE.Bios.Ghc.Doc
                        HIE.Bios.Ghc.Gap
                        HIE.Bios.Ghc.Load
                        HIE.Bios.Ghc.Logger
                        HIE.Bios.Wrappers
  Other-Modules:        Paths_hie_bios
  autogen-modules:      Paths_hie_bios
  Build-Depends:
                        base                 >= 4.8 && < 5,
                        aeson                >= 1.4.5 && < 2.1,
                        base16-bytestring    >= 0.1.1 && < 1.1,
                        bytestring           >= 0.10.8 && < 0.12,
                        deepseq              >= 1.4.3 && < 1.5,
                        exceptions           ^>= 0.10,
                        containers           >= 0.5.10 && < 0.7,
                        cryptohash-sha1      >= 0.11.100 && < 0.12,
                        directory            >= 1.3.0 && < 1.4,
                        filepath             >= 1.4.1 && < 1.5,
                        time                 >= 1.8.0 && < 1.13,
                        extra                >= 1.6.14 && < 1.8,
                        process              >= 1.6.1 && < 1.7,
                        ghc                  >= 8.6.1 && < 9.3,
                        transformers         >= 0.5.2 && < 0.7,
                        temporary            >= 1.2 && < 1.4,
                        text                 >= 1.2.3 && < 2.1,
                        unix-compat          >= 0.5.1 && < 0.6,
                        unordered-containers >= 0.2.9 && < 0.3,
                        vector               >= 0.12.0 && < 0.13,
                        yaml                 >= 0.10.0 && < 0.12,
                        hslogger             >= 1.2 && < 1.4,
                        file-embed           >= 0.0.11 && < 1,
                        conduit              >= 1.3 && < 2,
                        conduit-extra        >= 1.3 && < 2


Executable hie-bios
  Default-Language:     Haskell2010
  Main-Is:              Main.hs
  Other-Modules:        Paths_hie_bios
  GHC-Options:          -Wall
  HS-Source-Dirs:       exe
  Build-Depends:        base >= 4.9 && < 5
                      , directory
                      , filepath
                      , ghc
                      , hie-bios
                      , optparse-applicative

test-suite parser-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:
      base,
      aeson,
      filepath,
      hie-bios,
      tasty,
      tasty-hunit,
      text,
      unordered-containers,
      yaml

  hs-source-dirs: tests/
  ghc-options: -threaded -Wall
  main-is: ParserTests.hs

test-suite bios-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:
      base,
      extra,
      tasty,
      tasty-hunit,
      tasty-expected-failure,
      hie-bios,
      filepath,
      directory,
      temporary,
      tagged,
      ghc

  hs-source-dirs: tests/
  ghc-options: -threaded -Wall
  main-is: BiosTests.hs

Source-Repository head
  Type:                 git
  Location:             git://github.com/mpickering/hie-bios.git
