cabal-version: 2.2
name: hie-bios
version: 0.20.0
author: Matthew Pickering <matthewtpickering@gmail.com>, Hannes Siebenhandl <fendor.haskell@gmail.com>
maintainer: Hannes Siebenhandl <fendor.haskell@gmail.com>
license: BSD-3-Clause
license-file: LICENSE
homepage: https://github.com/haskell/hie-bios
synopsis: Set up a GHC API session
description: Set up a GHC API session and obtain flags required to compile a source file
category: Development
build-type: Simple
extra-doc-files: ChangeLog.md
extra-source-files:
  README.md
  tests/configs/*.yaml
  tests/projects/cabal-with-ghc-and-project/cabal-with-ghc.cabal
  tests/projects/cabal-with-ghc-and-project/cabal.project.extra
  tests/projects/cabal-with-ghc-and-project/hie.yaml
  tests/projects/cabal-with-ghc-and-project/src/MyLib.hs
  tests/projects/cabal-with-ghc/cabal-with-ghc.cabal
  tests/projects/cabal-with-ghc/cabal.project
  tests/projects/cabal-with-ghc/hie.yaml
  tests/projects/cabal-with-ghc/src/MyLib.hs
  tests/projects/cabal-with-project/cabal-with-project.cabal
  tests/projects/cabal-with-project/cabal.project.extra
  tests/projects/cabal-with-project/hie.yaml
  tests/projects/cabal-with-project/src/MyLib.hs
  tests/projects/deps-bios-new/A.hs
  tests/projects/deps-bios-new/B.hs
  tests/projects/deps-bios-new/hie-bios.sh
  tests/projects/deps-bios-new/hie.yaml
  tests/projects/failing-bios-ghc/A.hs
  tests/projects/failing-bios-ghc/B.hs
  tests/projects/failing-bios-ghc/hie.yaml
  tests/projects/failing-bios/A.hs
  tests/projects/failing-bios/B.hs
  tests/projects/failing-bios/hie.yaml
  tests/projects/failing-cabal/failing-cabal.cabal
  tests/projects/failing-cabal/hie.yaml
  tests/projects/failing-cabal/MyLib.hs
  tests/projects/failing-multi-repl-cabal-project/multi-repl-cabal-fail/app/Main.hs
  tests/projects/failing-multi-repl-cabal-project/multi-repl-cabal-fail/multi-repl-cabal-fail.cabal
  tests/projects/failing-multi-repl-cabal-project/multi-repl-cabal-fail/src/Fail.hs
  tests/projects/failing-multi-repl-cabal-project/multi-repl-cabal-fail/src/Lib.hs
  tests/projects/failing-multi-repl-cabal-project/NotInPath.hs
  tests/projects/failing-stack/failing-stack.cabal
  tests/projects/failing-stack/hie.yaml
  tests/projects/failing-stack/src/Lib.hs
  tests/projects/implicit-cabal-deep-project/cabal.project
  tests/projects/implicit-cabal-deep-project/foo/foo.cabal
  tests/projects/implicit-cabal-deep-project/foo/Main.hs
  tests/projects/implicit-cabal-deep-project/implicit-cabal-deep-project.cabal
  tests/projects/implicit-cabal-deep-project/Main.hs
  tests/projects/implicit-cabal-deep-project/README
  tests/projects/implicit-cabal-no-project/implicit-cabal-no-project.cabal
  tests/projects/implicit-cabal-no-project/Main.hs
  tests/projects/implicit-cabal/cabal.project
  tests/projects/implicit-cabal/implicit-cabal.cabal
  tests/projects/implicit-cabal/Main.hs
  tests/projects/implicit-stack-multi/implicit-stack-multi.cabal
  tests/projects/implicit-stack-multi/Main.hs
  tests/projects/implicit-stack-multi/other-package/Main.hs
  tests/projects/implicit-stack-multi/other-package/other-package.cabal
  tests/projects/implicit-stack/implicit-stack.cabal
  tests/projects/implicit-stack/Main.hs
  tests/projects/monorepo-cabal/A/A.cabal
  tests/projects/monorepo-cabal/A/Main.hs
  tests/projects/monorepo-cabal/B/B.cabal
  tests/projects/monorepo-cabal/B/MyLib.hs
  tests/projects/monorepo-cabal/cabal.project
  tests/projects/monorepo-cabal/hie.yaml
  tests/projects/multi-cabal-with-project/appA/appA.cabal
  tests/projects/multi-cabal-with-project/appA/src/Lib.hs
  tests/projects/multi-cabal-with-project/appB/appB.cabal
  tests/projects/multi-cabal-with-project/appB/src/Lib.hs
  tests/projects/multi-cabal-with-project/cabal.project.extra
  tests/projects/multi-cabal-with-project/hie.yaml
  tests/projects/multi-cabal/app/Main.hs
  tests/projects/multi-cabal/cabal.project
  tests/projects/multi-cabal/hie.yaml
  tests/projects/multi-cabal/multi-cabal.cabal
  tests/projects/multi-cabal/src/Lib.hs
  tests/projects/multi-direct/A.hs
  tests/projects/multi-direct/B.hs
  tests/projects/multi-direct/hie.yaml
  tests/projects/multi-stack-with-yaml/appA/appA.cabal
  tests/projects/multi-stack-with-yaml/appA/src/Lib.hs
  tests/projects/multi-stack-with-yaml/appB/appB.cabal
  tests/projects/multi-stack-with-yaml/appB/src/Lib.hs
  tests/projects/multi-stack-with-yaml/hie.yaml
  tests/projects/multi-stack/app/Main.hs
  tests/projects/multi-stack/cabal.project
  tests/projects/multi-stack/hie.yaml
  tests/projects/multi-stack/multi-stack.cabal
  tests/projects/multi-stack/src/Lib.hs
  tests/projects/nested-cabal/cabal.project
  tests/projects/nested-cabal/hie.yaml
  tests/projects/nested-cabal/MyLib.hs
  tests/projects/nested-cabal/nested-cabal.cabal
  tests/projects/nested-cabal/sub-comp/Lib.hs
  tests/projects/nested-cabal/sub-comp/sub-comp.cabal
  tests/projects/nested-stack/hie.yaml
  tests/projects/nested-stack/MyLib.hs
  tests/projects/nested-stack/nested-stack.cabal
  tests/projects/nested-stack/sub-comp/Lib.hs
  tests/projects/nested-stack/sub-comp/sub-comp.cabal
  tests/projects/simple-bios-ghc/A.hs
  tests/projects/simple-bios-ghc/B.hs
  tests/projects/simple-bios-ghc/hie-bios.sh
  tests/projects/simple-bios-ghc/hie.yaml
  tests/projects/simple-bios-shell/A.hs
  tests/projects/simple-bios-shell/B.hs
  tests/projects/simple-bios-shell/hie.yaml
  tests/projects/simple-bios/A.hs
  tests/projects/simple-bios/B.hs
  tests/projects/simple-bios/hie-bios-deps.sh
  tests/projects/simple-bios/hie-bios.sh
  tests/projects/simple-bios/hie.yaml
  tests/projects/simple-cabal/A.hs
  tests/projects/simple-cabal/B.hs
  tests/projects/simple-cabal/cabal.project
  tests/projects/simple-cabal/hie.yaml
  tests/projects/simple-cabal/simple-cabal.cabal
  tests/projects/simple-direct/A.hs
  tests/projects/simple-direct/B.hs
  tests/projects/simple-direct/hie.yaml
  tests/projects/simple-stack/A.hs
  tests/projects/simple-stack/B.hs
  tests/projects/simple-stack/cabal.project
  tests/projects/simple-stack/hie.yaml
  tests/projects/simple-stack/simple-stack.cabal
  "tests/projects/space stack/A.hs"
  "tests/projects/space stack/B.hs"
  "tests/projects/space stack/hie.yaml"
  "tests/projects/space stack/stackproj.cabal"
  tests/projects/stack-with-yaml/app/Main.hs
  tests/projects/stack-with-yaml/hie.yaml
  tests/projects/stack-with-yaml/src/Lib.hs
  tests/projects/stack-with-yaml/stack-with-yaml.cabal
  tests/projects/symlink-test/a/A.hs
  tests/projects/symlink-test/hie.yaml
  wrappers/cabal
  wrappers/cabal-with-repl
  wrappers/cabal-with-repl.hs
  wrappers/cabal.hs

tested-with: ghc ==9.6.7 || ==9.8.4 || ==9.10.1 || ==9.12.2 || ==9.14.1

library
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules:
    HIE.Bios
    HIE.Bios.Config
    HIE.Bios.Config.YAML
    HIE.Bios.Cradle
    HIE.Bios.Cradle.Cabal
    HIE.Bios.Cradle.ProgramVersions
    HIE.Bios.Cradle.ProjectConfig
    HIE.Bios.Cradle.Resolved
    HIE.Bios.Cradle.Utils
    HIE.Bios.Environment
    HIE.Bios.Flags
    HIE.Bios.Ghc.Api
    HIE.Bios.Ghc.Check
    HIE.Bios.Ghc.Doc
    HIE.Bios.Ghc.Gap
    HIE.Bios.Ghc.Load
    HIE.Bios.Ghc.Logger
    HIE.Bios.Internal.Debug
    HIE.Bios.Process
    HIE.Bios.Types
    HIE.Bios.Wrappers

  other-modules: Paths_hie_bios
  autogen-modules: Paths_hie_bios
  build-depends:
    aeson >=1.4.4 && <2.4,
    base >=4.16 && <5,
    base16-bytestring >=0.1.1 && <1.1,
    bytestring >=0.10.8 && <0.13,
    co-log-core ^>=0.3.0,
    conduit >=1.3 && <2,
    conduit-extra >=1.3 && <2,
    containers >=0.6.2 && <0.9,
    cryptohash-sha1 >=0.11.100 && <0.12,
    deepseq >=1.4.3 && <1.6,
    directory >=1.3.0 && <1.4,
    exceptions ^>=0.10,
    extra >=1.6.14 && <1.9,
    file-embed >=0.0.11 && <1,
    filelock >=0.1.1 && <0.2,
    filepath >=1.4.1 && <1.6,
    ghc >=9.2.1 && <10.2,
    prettyprinter ^>=1.6 || ^>=1.7.0,
    template-haskell >=2.18 && <2.25,
    temporary >=1.2 && <1.4,
    text >=1.2.3 && <2.2,
    time >=1.8.0 && <1.17,
    transformers >=0.5.2 && <0.7,
    unix-compat >=0.5.1 && <0.8,
    unordered-containers >=0.2.9 && <0.3,
    yaml >=0.10.0 && <0.12,

executable hie-bios
  default-language: Haskell2010
  main-is: Main.hs
  other-modules: Paths_hie_bios
  autogen-modules: Paths_hie_bios
  ghc-options: -Wall
  hs-source-dirs: exe
  build-depends:
    base >=4.16 && <5,
    co-log-core,
    directory,
    filepath,
    hie-bios,
    optparse-applicative >=0.17.1 && <0.20,
    prettyprinter,

test-suite parser-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    filepath,
    hie-bios,
    tasty,
    tasty-hunit,
    yaml,

  hs-source-dirs: tests/
  ghc-options:
    -threaded
    -Wall

  main-is: ParserTests.hs

test-suite bios-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:
    async,
    base,
    co-log-core,
    directory,
    extra,
    filepath,
    ghc,
    hie-bios,
    prettyprinter,
    tasty,
    tasty-expected-failure,
    tasty-hunit,
    temporary,
    text,
    transformers,

  hs-source-dirs: tests/
  main-is: BiosTests.hs
  other-modules: Utils
  ghc-options:
    -threaded
    -Wall

  -- There seems to be a race condition on windows
  if !os(windows)
    ghc-options:
      -rtsopts
      -with-rtsopts=-N

source-repository head
  type: git
  location: https://github.com/haskell/hie-bios.git
