cabal-version:       >=1.10
name:                failing-cabal
version:             0.1.0.0
license-file:        LICENSE
author:              fendor
build-type:          Simple

library
  exposed-modules:     MyLib
  build-depends:       base >=4.13 && <4.14,
                       containers < 1 && > 1
                       --         ^^^^^^^^^^ <<< Invalid constraint
  default-language:    Haskell2010
