cabal-version: 1.12
name:           failing-stack
version:        0.1.0.0
description:    None
build-type:     Simple

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      containes < 1 && > 1
      --         ^^^^^^^^^^ <<< Invalid constraint
  default-language: Haskell2010
