cabal-version:       >=2.0
name:                multi-stack
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules: Lib
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.10 && < 5, filepath
  -- hs-source-dirs:
  default-language:    Haskell2010



executable multi-stack
  main-is:              app/Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.10 && < 5, directory
  -- hs-source-dirs:
  default-language:    Haskell2010