cabal-version:       >=2.0
name:                simple-stack
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Matthew Pickering
maintainer:          matthewtpickering@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules: A B
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.10 && < 5
  -- hs-source-dirs:
  default-language:    Haskell2010
